upd: add jwt token security
