# src/main/java/com/applydigital/presentation/controller/NewsApi.java
@@ -12,14 +12,16 @@ public interface NewsApi {
 
 
     @RequestMapping(method = RequestMethod.GET)
-    ResponseEntity<List<NewsGetResponseDTO>> getAllNews(@RequestParam(name = "author", required=false) String author,
+    ResponseEntity<List<NewsGetResponseDTO>> getAllNews(@RequestHeader(value = "X-Service-Token", required = false) String token,
+            @RequestParam(name = "author", required=false) String author,
             @RequestParam(name = "tags", required=false) List<String> tags,
             @RequestParam(name = "storytitle", required=false) String storyTitle,
             @RequestParam(name = "month", required=false) Month month);
     @RequestMapping(value = "/{objectId}", method = RequestMethod.GET)
     ResponseEntity<NewsGetResponseDTO> getNewsByObjectId(@PathVariable String objectId);
     @RequestMapping(value = "/{objectId}", method = RequestMethod.DELETE)
-    ResponseEntity<Void> deleteNewsById(@PathVariable String objectId);
+    ResponseEntity<Void> deleteNewsById(@RequestHeader("X-Service-Token") String token,
+                                        @PathVariable String objectId);
 
 
 }
